updated README and try to create a graphic interface